fix: remove 'SSR' of angular :bug:

--- a/angular.json
+++ b/angular.json
@@ -34,12 +34,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -105,6 +100,6 @@
     }
   },
   "cli": {
-    "analytics": "c6037c41-6f21-4834-87e8-a6faa7110407"
+    "analytics": false
   }
 }
