--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular-feather": "^6.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -28,6 +29,8 @@
     "@angular/cli": "^18.0.5",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.9",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
