feat: add jest to the project :package:

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,8 +4,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
+    "module": "CommonJs",
     "types": [
-      "jasmine",
+      "jest",
       "node"
     ]
   },
