--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand"
   },
   "private": true,
   "dependencies": {
@@ -30,14 +32,29 @@
     "@angular/cli": "^18.0.5",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.2.2",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": ["<rootDir>/setup-jest.ts"],
+    "globalSetup": "jest-preset-angular/global-setup",
+    "moduleNameMapper": {
+      "^@core/(.*)$": "<rootDir>/src/app/core/$1",
+      "^@design-system/(.*)$": "<rootDir>/src/app/design-system/$1",
+      "^@shared/(.*)$": "<rootDir>/src/app/shared/$1",
+      "^@auth/(.*)$": "<rootDir>/src/app/auth/$1",
+      "^@environments/(.*)$": "<rootDir>/src/environments/$1"
+    }
   }
 }
