feat: add coverage to the project :sparkles:

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test:ci": "jest --runInBand"
   },
   "private": true,
@@ -55,6 +56,14 @@
       "^@shared/(.*)$": "<rootDir>/src/app/shared/$1",
       "^@auth/(.*)$": "<rootDir>/src/app/auth/$1",
       "^@environments/(.*)$": "<rootDir>/src/environments/$1"
-    }
+    },
+
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["html", "text"],
+    "collectCoverageFrom": [
+      "src/**/*.{js,ts}",
+      "!src/**/*.d.ts"
+    ]
   }
 }
