--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "angular-feather": "^6.5.1",
+    "aws-amplify": "^6.5.0",
     "http-status-codes": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
