--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --runInBand"
+    "test:ci": "jest --runInBand",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "@types/uuid": "^10.0.0",
+    "angular-eslint": "18.3.0",
+    "eslint": "^9.9.0",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.7",
@@ -46,7 +49,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.1.0"
   },
   "jest": {
     "preset": "jest-preset-angular",
